--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.example.riteshkumarsingh.githubuser"
+        applicationId "com.example.riteshkumarsingh.weatherapplication"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
