--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".WeatherApplication"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.riteshkumarsingh.weatherapplication.HomeActivity">
             <intent-filter>
