--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.1.3-2'
+    ext.timber_version = '4.5.1'
     repositories {
         google()
         jcenter()
