--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:name=".WeatherApplication"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.riteshkumarsingh.weatherapplication.HomeActivity">
+        <activity android:name="com.example.riteshkumarsingh.weatherapplication.ui.view.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
