--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.1.3-2'
     ext.timber_version = '4.5.1'
     ext.mockito_version = '2.11.0'
+    ext.dagger2_version = '2.12'
     repositories {
         google()
         jcenter()
