--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,38 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
-    ext.timber_version = '4.5.1'
-    ext.mockito_version = '2.11.0'
-    ext.dagger2_version = '2.12'
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  ext.kotlin_version = '1.1.3-2'
+  ext.timber_version = '4.5.1'
+  ext.mockito_version = '2.11.0'
+  ext.dagger2_version = '2.5'
+  ext.mockitoVersion = '1.10.19'
+  ext.hamcrestVersion = '1.3'
+  ext.powerMockito = '1.6.2'
+  ext.runnerVersion = '0.5'
+  ext.rulesVersion = '0.5'
+  ext.espressoVersion = '3.0.1'
+  ext.mockitoAndroid = '2.7.22'
+  ext.mockWebServer = '3.6.0'
+  repositories {
+    google()
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+  repositories {
+    google()
+    jcenter()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
