Added room dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
   // Stetho
   implementation 'com.facebook.stetho:stetho:1.5.0'
   implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
+  // Room
+  implementation "android.arch.persistence.room:runtime:$room_version"
+  kapt "android.arch.persistence.room:compiler:$room_version"
 }
