--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,8 @@ dependencies {
   // Room
   implementation "android.arch.persistence.room:runtime:$room_version"
   kapt "android.arch.persistence.room:compiler:$room_version"
+
+  // Leak Canary
+  debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
+  releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leak_canary_version"
 }
