--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
   ext.kotlin_version = '1.1.3-2'
   ext.timber_version = '4.5.1'
   ext.room_version = '1.0.0'
+  ext.view_model_version = '1.1.0'
   ext.leak_canary_version = '1.5.4'
   repositories {
     google()
